syntax = "proto3";

option java_package = "com.doctoror.commons.wear";

message PlaybackState {
  int32 state = 1;
}

message PlaybackPosition {
  int64 mediaId = 1;
  int64 position = 2;
}

message Media {
  int32 positionInPlaylist = 1;
  int64 id = 2;
  string title = 3;
  int64 duration = 4;
  string artist = 5;
  string album = 6;
}

message Playlist {
  repeated Media media = 1;
}
