syntax = "proto3";

option java_package = "com.doctoror.commons.wear";

message Queue {
  repeated int64 queue = 1;
  int64 selectedId = 2;
}
